# scenetax

./: README.md  commands.txt  pyproject.toml  scaffold_extra.txt
src/scenetax/: cli.py  core.py  jinja.py
templates/: entity_metadata.yaml  linked_projects.md  scene.md  scenetax.md
templates/chapter/: chapter_metadata.yaml  scene_metadata.yaml
templates/character/: beliefs_personality.yaml  core_identity.yaml  quick_capture.md  quick_capture.yaml
templates/group/: quick_capture.yaml
templates/location/: quick_capture.yaml
